--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <!-- Importando CSS externo -->
+    <link rel="stylesheet" href="./src/css/styles.css">
+    <!-- Importando bootstrap no CSS via CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
+    <header>
+        <!-- Adcicionar depois a header-->
+    </header>
     
+
+    <!-- Importando o Script do Bootstrap (JavaScript) via CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
