--- a/categorias.html
+++ b/categorias.html
@@ -6,7 +6,7 @@
     <title>EcoTrend - Roupas e Acessórios Sustentáveis</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="./src/css/styles1.css">
 </head>
 <body>
 
