Adcionando imagens para teste e criando botões interativos paro o slide

--- a/index.html
+++ b/index.html
@@ -23,15 +23,23 @@
         <!-- Início do slide do carousel -->
         <div class="carousel-inner">
             <div class="carousel-item active " data-bs-interval="3000">  <!--data-bs-interval= definir o tempo de mudar para o próximo slide-->
-                <img src="..." class="d-block w-100" alt="Não foi possivel carregar a img1">
+                <img src="./src/assets-home/carousel_img1.jpg" class="d-block w-100" alt="Não foi possivel carregar a img1">
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-                <img src="..." class="d-block w-100" alt="Não foi possivel carregar a img2">
+                <img src="./src/assets-home/carousel_img2.jpg" class="d-block w-100" alt="Não foi possivel carregar a img2">
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-                <img src="..." class="d-block w-100" alt="Não foi possivel carregar a img3">
+                <img src="./src/assets-home/carousel_img3.jpg" class="d-block w-100" alt="Não foi possivel carregar a img3">
             </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
     </div>
 
     <!-- Importando o Script do Bootstrap (JavaScript) via CDN -->
