--- a/index.html
+++ b/index.html
@@ -19,19 +19,44 @@
     </header>
 
     <!-- Estrutura do carousel -->
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel"> <!--data-bs-ride="carousel" permite o slide passar automaticamente-->
+    <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel"> <!--data-bs-ride="carousel" permite o slide passar automaticamente-->
+        
+        <!-- Indicadores que permitem escolher o slide -->
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+
         <!-- Início do slide do carousel -->
         <div class="carousel-inner">
+            <!-- Slide img 1 -->
             <div class="carousel-item active " data-bs-interval="3000">  <!--data-bs-interval= definir o tempo de mudar para o próximo slide-->
                 <img src="./src/assets-home/carousel_img1.jpg" class="d-block w-100" alt="Não foi possivel carregar a img1">
+                <div class="carousel-caption d-none d-md-block"> <!--Para adicionar legenda aos slides--> <!--d-md-block= A legenda só reaparece quando a tela atinge md (médio) ou maior.-->
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
             </div>
+            <!-- Slide img 2 -->
             <div class="carousel-item" data-bs-interval="3000">
                 <img src="./src/assets-home/carousel_img2.jpg" class="d-block w-100" alt="Não foi possivel carregar a img2">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                  </div>
             </div>
+            <!-- Slide img 3 -->
             <div class="carousel-item" data-bs-interval="3000">
                 <img src="./src/assets-home/carousel_img3.jpg" class="d-block w-100" alt="Não foi possivel carregar a img3">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                  </div>
             </div>
         </div>
+
+        <!-- Botão de ação para mudar de slide -->
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
