--- a/detalhes.html
+++ b/detalhes.html
@@ -17,18 +17,74 @@
 </head>
 <body>
     <header>
-        <img src="./src/logoektd.png" alt="logo-ekko-trend"/>
-        <div class="c-header"> <!--c-header = container-header-->
-        <nav>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="./src/logoektd.png" alt="logo-ekko-trend" id="logo-header">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link efeitolink" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link efeitolink" href="./categorias.html">Produtos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link efeitolink" href="./contato.html">Fale conosco</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <img src="./src/carrinho.png" id="carrinho" alt="Carrinho"/>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <div class="c-card-produto">
+            <div class="card w-100 card-produto"> <!--w-100 = width = 100-->
+                <div class="card-body">
+                <img src="./src/logoektd.png" alt="img-produto-1"/>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, autem porro incidunt dolorum eum animi, repellat molestias error modi magni placeat numquam recusandae tenetur beatae ex repudiandae nemo ipsa. Debitis!</p>
+                <p class="card-text"><b>Valor: R$ 187,50</b></p>
+                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
+                <a href="#" class="btn btn-success">Comprar</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+    <footer class="rodape">
+        <div class="c-left">
+            <h4 id="title-left">Links Úteis</h2>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./categorias.html">Produtos</a></li>
-                <li><a href="./contato.html">Fale conosco</a></li>
-                <li><a href="#"><img src="#"/></a></li>
+                <li><a href="./categorias.html">Ver todos os produtos</a></li>
+                <li><a href="./contato.html">Contato</a></li>
             </ul>
-        </nav>
         </div>
-    </header>
+
+        <div class="c-right">
+            <h4 id="title-right">Desenvolvedores</h4>
+                <ul>
+                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Francisco Vargas</a></li>
+                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Matheus Eiki</a></li>
+                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Marcelo Affonso</a></li>
+                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Kayque Carvalho</a></li>
+                </ul>
+            </h4>
+        </div>
+    </footer>
+
+
 
     <!--chamando js externo-->
     <script src="./src/js/script.js"></script>
