Criando estrutura de grid com cards

--- a/index.html
+++ b/index.html
@@ -67,6 +67,80 @@
           </button>
     </div>
 
+<!-- Grid de produtos-->
+
+<!-- Categoria 1 -->
+<div class="container text-center">
+    <div class="row gy-5 gx-4 pt-5">
+      <div class="col-md-4 col-sm-6 col-12">
+          <div class="card">
+              <img src="#" class="card-img-top" alt="Imagem 1">
+              <div class="card-body">
+                <h5 class="card-title">Produto 1</h5>
+                <p class="card-text">Descriçãodo produto.</p>
+                <a href="#" class="btn btn-primary">Saiba mais</a>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4 col-sm-6 col-12">
+          <div class="card">
+              <img src="#" class="card-img-top" alt="Imagem 2">
+              <div class="card-body">
+                <h5 class="card-title">Produto 2</h5>
+                <p class="card-text">Descriçãodo produto.</p>
+                <a href="#" class="btn btn-primary">Saiba mais</a>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4 col-sm-6 col-12">
+          <div class="card">
+              <img src="#" class="card-img-top" alt="Imagem 3">
+              <div class="card-body">
+                <h5 class="card-title">Produto 3</h5>
+                <p class="card-text">Descriçãodo produto.</p>
+                <a href="#" class="btn btn-primary">Saiba mais</a>
+              </div>
+          </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Categoria 2 -->
+  <div class="container text-center">
+    <div class="row gy-5 gx-4 pt-4">
+      <div class="col-md-4 col-sm-6 col-12">
+          <div class="card">
+              <img src="#" class="card-img-top" alt="Imagem 4">
+              <div class="card-body">
+                <h5 class="card-title">Produto 4</h5>
+                <p class="card-text">Descriçãodo produto.</p>
+                <a href="#" class="btn btn-primary">Saiba mais</a>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4 col-sm-6 col-12">
+          <div class="card">
+              <img src="#" class="card-img-top" alt="Imagem 5">
+              <div class="card-body">
+                <h5 class="card-title">Produto 5</h5>
+                <p class="card-text">Descriçãodo produto.</p>
+                <a href="#" class="btn btn-primary">Saiba mais</a>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4 col-sm-6 col-12">
+          <div class="card">
+              <img src="#" class="card-img-top" alt="Imagem 6">
+              <div class="card-body">
+                <h5 class="card-title">Produto 6</h5>
+                <p class="card-text">Descriçãodo produto.</p>
+                <a href="#" class="btn btn-primary">Saiba mais</a>
+              </div>
+          </div>
+      </div>
+    </div>
+  </div>
+
     <!-- Importando o Script do Bootstrap (JavaScript) via CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
