--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <div class="carousel-caption d-none d-md-block"> <!--Para adicionar legenda aos slides--> <!--d-md-block= A legenda só reaparece quando a tela atinge md (médio) ou maior.-->
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
+                    <a class="btn btn-lg btn-primary" href="#" role="button">Ver mais</a>
                 </div>
             </div>
             <!-- Slide img 2 -->
@@ -44,6 +45,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
+                    <a class="btn btn-lg btn-primary" href="#" role="button">Ver mais</a>
                   </div>
             </div>
             <!-- Slide img 3 -->
@@ -52,6 +54,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
+                    <a class="btn btn-lg btn-primary" href="#" role="button">Ver mais</a>
                   </div>
             </div>
         </div>
