Adcionando H2 para definir a categoria dos produtos

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
 <!-- Categoria 1 -->
 <div class="container text-center">
-    <div class="row gy-5 gx-4 pt-5">
+    <h2 class="text-start pt-5">Categoria 1</h2> <!--text-start = para deixar o título na esquerda-->
+    <div class="row gy-5 gx-4">
       <div class="col-md-4 col-sm-6 col-12">
           <div class="card">
               <img src="#" class="card-img-top" alt="Imagem 1">
@@ -95,7 +96,7 @@
               </div>
           </div>
       </div>
-      <div class="col-md-4 col-sm-6 col-12">
+      <div class="col-md-4 col-sm-6 col-12"> <!-- Adicione isso caso queira que o terceiro slide fique no centro <div class="col-md-4 col-sm-6 col-12 mx-auto">-->
           <div class="card">
               <img src="#" class="card-img-top" alt="Imagem 3">
               <div class="card-body">
@@ -110,7 +111,8 @@
 
   <!-- Categoria 2 -->
   <div class="container text-center">
-    <div class="row gy-5 gx-4 pt-4">
+    <h2 class="text-start pt-5">Categoria 2</h2>
+    <div class="row gy-5 gx-4">
       <div class="col-md-4 col-sm-6 col-12">
           <div class="card">
               <img src="#" class="card-img-top" alt="Imagem 4">
@@ -131,7 +133,7 @@
               </div>
           </div>
       </div>
-      <div class="col-md-4 col-sm-6 col-12">
+      <div class="col-md-4 col-sm-6 col-12"> <!-- Adicione isso caso queira que o terceiro slide fique no centro <div class="col-md-4 col-sm-6 col-12 mx-auto">-->
           <div class="card">
               <img src="#" class="card-img-top" alt="Imagem 6">
               <div class="card-body">
