Alterando o tempo de slide e adcionando href para as categorias ao clicar no botão do slide

--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
         <!-- Início do slide do carousel -->
         <div class="carousel-inner">
             <!-- Slide img 1 -->
-            <div class="carousel-item active " data-bs-interval="3000">  <!--data-bs-interval= definir o tempo de mudar para o próximo slide-->
+            <div class="carousel-item active " data-bs-interval="5000">  <!--data-bs-interval= definir o tempo de mudar para o próximo slide-->
                 <img src="./src/assets-home/carousel_img1.jpg" class="d-block w-100" alt="Não foi possivel carregar a img1">
                 <div class="carousel-caption d-none d-md-block"> <!--Para adicionar legenda aos slides--> <!--d-md-block= A legenda só reaparece quando a tela atinge md (médio) ou maior.-->
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
-                    <a class="btn btn-lg btn-primary" href="#" role="button">Ver mais</a>
+                    <a class="btn btn-lg btn-primary" href="#categoria1">Ver mais</a>
                 </div>
             </div>
             <!-- Slide img 2 -->
-            <div class="carousel-item" data-bs-interval="3000">
+            <div class="carousel-item" data-bs-interval="5000">
                 <img src="./src/assets-home/carousel_img2.jpg" class="d-block w-100" alt="Não foi possivel carregar a img2">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
-                    <a class="btn btn-lg btn-primary" href="#" role="button">Ver mais</a>
+                    <a class="btn btn-lg btn-primary" href="#categoria2" role="button">Ver mais</a>
                   </div>
             </div>
             <!-- Slide img 3 -->
-            <div class="carousel-item" data-bs-interval="3000">
+            <div class="carousel-item" data-bs-interval="5000">
                 <img src="./src/assets-home/carousel_img3.jpg" class="d-block w-100" alt="Não foi possivel carregar a img3">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
@@ -74,7 +74,7 @@
 
 <!-- Categoria 1 -->
 <div class="container text-center">
-    <h2 class="text-start pt-5">Categoria 1</h2> <!--text-start = para deixar o título na esquerda-->
+    <h2 class="text-start pt-5" id="categoria1">Categoria 1</h2> <!--text-start = para deixar o título na esquerda-->
     <div class="row gy-5 gx-4">
       <div class="col-md-4 col-sm-6 col-12">
           <div class="card">
@@ -111,7 +111,7 @@
 
   <!-- Categoria 2 -->
   <div class="container text-center">
-    <h2 class="text-start pt-5">Categoria 2</h2>
+    <h2 class="text-start pt-5" id="categoria2">Categoria 2</h2>
     <div class="row gy-5 gx-4">
       <div class="col-md-4 col-sm-6 col-12">
           <div class="card">
