--- a/CP4-Front-End-main/contato.html
+++ b/CP4-Front-End-main/contato.html
@@ -7,6 +7,36 @@
     <link rel ="stylesheet" href="./src/css/styles.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="./src/logoektd.png" alt="logo-ekko-trend" id="logo-header">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link efeitolink" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link efeitolink" href="./categorias.html">Produtos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link efeitolink" href="./contato.html">Fale conosco</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <img src="./src/carrinho.png" id="carrinho" alt="Carrinho"/>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="Contato">
         <div class="gridcontainer">
             <label for ="nome"><b>Nome:</b></label>
