--- a/CP4-Front-End-main/contato.html
+++ b/CP4-Front-End-main/contato.html
@@ -50,6 +50,27 @@
             <input type="submit" name="enviar" id="btn-submit" onclick="botaoenviar()">
         </div>
     </div>
+    <footer class="rodape">
+        <div class="c-left">
+            <h4 id="title-left">Links Úteis</h2>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./categorias.html">Ver todos os produtos</a></li>
+                <li><a href="./contato.html">Contato</a></li>
+            </ul>
+        </div>
+
+        <div class="c-right">
+            <h4 id="title-right">Desenvolvedores</h4>
+                <ul>
+                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Francisco Vargas</a></li>
+                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Matheus Eiki</a></li>
+                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Marcelo Affonso</a></li>
+                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Kayque Carvalho</a></li>
+                </ul>
+            </h4>
+        </div>
+    </footer>
     <!--Chamando o JS externo-->
     <script src="/src/js/script.js"></script>
 </body>
