Importando imagens para o card e adicionando título e descrição para os produtos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <!-- Incluindo viewport para responsividade de telas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,34 +73,39 @@
 
 <!-- Categoria 1 -->
 <div class="container text-center">
-    <h2 class="text-start pt-5" id="categoria1">Categoria 1</h2> <!--text-start = para deixar o título na esquerda-->
+    <h2 class="text-start pt-5" id="categoria1">Camisetas ecológicas</h2> <!--text-start = para deixar o título na esquerda-->
+
+    <!-- Camisa ExoWear -->
     <div class="row gy-5 gx-4">
       <div class="col-md-4 col-sm-6 col-12">
           <div class="card">
-              <img src="#" class="card-img-top" alt="Imagem 1">
+              <img src="./src/assets/produto-1.png" class="card-img-top" alt="Imagem 1">
               <div class="card-body">
-                <h5 class="card-title">Produto 1</h5>
-                <p class="card-text">Descriçãodo produto.</p>
+                <h5 class="card-title">EcoWear</h5>
+                <p class="card-text">A Camiseta Verde Sustentável para você</p>
                 <a href="#" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
       </div>
+      <!-- NOMAD conforto -->
       <div class="col-md-4 col-sm-6 col-12">
           <div class="card">
-              <img src="#" class="card-img-top" alt="Imagem 2">
+              <img src="./src/assets/produto-2.png" class="card-img-top" alt="Imagem 2">
               <div class="card-body">
-                <h5 class="card-title">Produto 2</h5>
-                <p class="card-text">Descriçãodo produto.</p>
+                <h5 class="card-title">NOMAD Conforto</h5>
+                <p class="card-text">A Camiseta Essencial para o Seu Dia a Dia</p>
                 <a href="#" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
       </div>
+
+      <!-- Noite verde -->
       <div class="col-md-4 col-sm-6 col-12"> <!-- Adicione isso caso queira que o terceiro slide fique no centro <div class="col-md-4 col-sm-6 col-12 mx-auto">-->
           <div class="card">
-              <img src="#" class="card-img-top" alt="Imagem 3">
+              <img src="./src/assets/produto-3.png" class="card-img-top" alt="Imagem 3">
               <div class="card-body">
-                <h5 class="card-title">Produto 3</h5>
-                <p class="card-text">Descriçãodo produto.</p>
+                <h5 class="card-title">Noite Verde</h5>
+                <p class="card-text">Camiseta Preta de Algodão Orgânico</p>
                 <a href="#" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
@@ -111,34 +115,40 @@
 
   <!-- Categoria 2 -->
   <div class="container text-center">
-    <h2 class="text-start pt-5" id="categoria2">Categoria 2</h2>
+    <h2 class="text-start pt-5" id="categoria2">Acessórios da terra</h2>
     <div class="row gy-5 gx-4">
+
+      <!-- Boné de Cortiça -->
       <div class="col-md-4 col-sm-6 col-12">
           <div class="card">
-              <img src="#" class="card-img-top" alt="Imagem 4">
+              <img src="./src/assets/produto-4.png" class="card-img-top" alt="Imagem 4">
               <div class="card-body">
-                <h5 class="card-title">Produto 4</h5>
-                <p class="card-text">Descriçãodo produto.</p>
+                <h5 class="card-title">Boné de Cortiça</h5>
+                <p class="card-text">A sua cobertura natural contra o Sol</p>
                 <a href="#" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
       </div>
+
+      <!-- Semente da Vida -->
       <div class="col-md-4 col-sm-6 col-12">
           <div class="card">
-              <img src="#" class="card-img-top" alt="Imagem 5">
+              <img src="./src/assets/produto-5.png" class="card-img-top" alt="Imagem 5">
               <div class="card-body">
-                <h5 class="card-title">Produto 5</h5>
-                <p class="card-text">Descriçãodo produto.</p>
+                <h5 class="card-title">Semente da Vida</h5>
+                <p class="card-text">Pulseira feita de Madeira Artesanal</p>
                 <a href="#" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
       </div>
+
+      <!-- EcoLink -->
       <div class="col-md-4 col-sm-6 col-12"> <!-- Adicione isso caso queira que o terceiro slide fique no centro <div class="col-md-4 col-sm-6 col-12 mx-auto">-->
           <div class="card">
-              <img src="#" class="card-img-top" alt="Imagem 6">
+              <img src="./src/assets/produto-6.png" class="card-img-top" alt="Imagem 6">
               <div class="card-body">
-                <h5 class="card-title">Produto 6</h5>
-                <p class="card-text">Descriçãodo produto.</p>
+                <h5 class="card-title">EcoLink</h5>
+                <p class="card-text">Colar de Madeira e Cordão Natural</p>
                 <a href="#" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
