--- a/detalhes.html
+++ b/detalhes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes do Produto | Ekko Trend</title>
+    <title>Detalhes do Produto | Eco Wear</title>
     <!--chamando CSS externo-->
     <link rel="stylesheet" href="./src/css/styles.css">
     <!--adicionando ícone na guia da página-->
@@ -38,7 +38,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <img src="./src/carrinho.png" id="carrinho" alt="Carrinho"/>
+                                <img src="./src/cestinha.png" id="carrinho" alt="Carrinho"/>
                             </a>
                         </li>
                     </ul>
@@ -51,11 +51,11 @@
         <div class="c-card-produto">
             <div class="card w-100 card-produto"> <!--w-100 = width = 100-->
                 <div class="card-body">
-                <img src="./src/logoektd.png" alt="img-produto-1"/>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, autem porro incidunt dolorum eum animi, repellat molestias error modi magni placeat numquam recusandae tenetur beatae ex repudiandae nemo ipsa. Debitis!</p>
-                <p class="card-text"><b>Valor: R$ 187,50</b></p>
-                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
-                <a href="#" class="btn btn-success">Comprar</a>
+                    <img src="./src/produto-1.png" alt="img-produto-1" id="prod1"/>
+                    <p class="card-text">A camiseta <b>EcoWear</b> é a peça essencial que combina conforto, estilo e consciência ambiental. Feita com algodão orgânico de alta qualidade, cultivado sem o uso de pesticidas e fertilizantes químicos, ela oferece um toque suave e natural à sua pele, além de ser gentil com o planeta.</p>
+                    <p class="card-text" id="valor-produto"><b>Valor: R$ 199,90</b></p>
+                    <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
+                    <a href="#" class="btn btn-success">Comprar</a>
                 </div>
             </div>
         </div>
