--- a/index.html
+++ b/index.html
@@ -31,29 +31,29 @@
         <div class="carousel-inner">
             <!-- Slide img 1 -->
             <div class="carousel-item active " data-bs-interval="5000">  <!--data-bs-interval= definir o tempo de mudar para o próximo slide-->
-                <img src="./src/assets-home/carousel_img1.jpg" class="d-block w-100" alt="Não foi possivel carregar a img1">
-                <div class="carousel-caption d-none d-md-block"> <!--Para adicionar legenda aos slides--> <!--d-md-block= A legenda só reaparece quando a tela atinge md (médio) ou maior.-->
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                    <a class="btn btn-lg btn-primary" href="#categoria1">Ver mais</a>
+                <img src="./src/assets-home/carousel_img1.png" class="d-block w-100" alt="Não foi possivel carregar a img1">
+                <div class="carousel-caption"> <!--Para adicionar legenda aos slides--> <!--d-md-block= A legenda só reaparece quando a tela atinge md (médio) ou maior.-->
+                  <h4>ECO TRED</h4>
+                  <p class="d-none d-md-block">Confira toda as nossas linhas de produtos auto sustentáveis</p>
+                  <a class="btn btn-lg btn-primary" href="#">Confira nossos produtos</a>
                 </div>
             </div>
             <!-- Slide img 2 -->
             <div class="carousel-item" data-bs-interval="5000">
-                <img src="./src/assets-home/carousel_img2.jpg" class="d-block w-100" alt="Não foi possivel carregar a img2">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                    <a class="btn btn-lg btn-primary" href="#categoria2" role="button">Ver mais</a>
+                <img src="./src/assets-home/carousel_img2.png" class="d-block w-100" alt="Não foi possivel carregar a img2">
+                <div class="carousel-caption">
+                    <h5>SEMANA DO CONSUMIDOR</h5>
+                    <p class="d-none d-md-block">Camisa EcoWear com até 40% de desconto</p>
+                    <a class="btn btn-lg btn-success" href="" role="button">Ver oferta</a>
                   </div>
             </div>
             <!-- Slide img 3 -->
             <div class="carousel-item" data-bs-interval="5000">
-                <img src="./src/assets-home/carousel_img3.jpg" class="d-block w-100" alt="Não foi possivel carregar a img3">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                    <a class="btn btn-lg btn-primary" href="#" role="button">Ver mais</a>
+                <img src="./src/assets-home/carousel_img3.png" class="d-block w-100" alt="Não foi possivel carregar a img3">
+                <div class="carousel-caption">
+                    <h5>Acessórios Tesouro da Terra</h5>
+                    <p class="d-none d-md-block">Confira a nossa linha de acessórios auto sustentáveis</p>
+                    <a class="btn btn-lg btn-primary" href="#categoria2" role="button">Ver mais</a>
                   </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
               <img src="./src/assets/produto-3.png" class="card-img-top" alt="Imagem 3">
               <div class="card-body">
                 <h5 class="card-title">Noite Verde</h5>
-                <p class="card-text">Camiseta Preta de Algodão Orgânico</p>
+                <p class="card-text">Camiseta Preta feita de Algodão Orgânico       </p>
                 <a href="#" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
