Adcionando href no slide para acessar todos os produtos

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="carousel-caption"> <!--Para adicionar legenda aos slides--> <!--d-md-block= A legenda só reaparece quando a tela atinge md (médio) ou maior.-->
                   <h4>ECO TRED</h4>
                   <p class="d-none d-md-block">Confira toda as nossas linhas de produtos auto sustentáveis</p>
-                  <a class="btn btn-lg btn-primary" href="#">Confira nossos produtos</a>
+                  <a class="btn btn-lg btn-primary" href="./categorias.html">Confira nossos produtos</a>
                 </div>
             </div>
             <!-- Slide img 2 -->
