Ajustando estrutura de assets

--- a/detalhes.html
+++ b/detalhes.html
@@ -51,7 +51,7 @@
         <div class="c-card-produto">
             <div class="card w-100 card-produto"> <!--w-100 = width = 100-->
                 <div class="card-body">
-                    <img src="./src/produto-1.png" alt="img-produto-1" id="prod1"/>
+                    <img src="./src/assets/produto-1.png" alt="img-produto-1" id="prod1"/>
                     <p class="card-text">A camiseta <b>EcoWear</b> é a peça essencial que combina conforto, estilo e consciência ambiental. Feita com algodão orgânico de alta qualidade, cultivado sem o uso de pesticidas e fertilizantes químicos, ela oferece um toque suave e natural à sua pele, além de ser gentil com o planeta.</p>
                     <p class="card-text" id="valor-produto"><b>Valor: R$ 199,90</b></p>
                     <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
