--- a/detalhes2.html
+++ b/detalhes2.html
@@ -51,7 +51,7 @@
         <div class="c-card-produto">
             <div class="card w-100 card-produto"> <!--w-100 = width = 100-->
                 <div class="card-body">
-                    <img src="./src/produto-5.png" alt="img-produto-1" id="prod1"/>
+                    <img src="./src/assets/produto-5.png" alt="img-produto-pulsseira" id="prod1"/>
                     <p class="card-text">A pulseira "Semente da Vida" é uma peça única e artesanal, que celebra a beleza e a força da natureza. Cada conta de madeira é cuidadosamente selecionada e polida, revelando a textura e os tons naturais da madeira. O design da pulseira é inspirado na simbologia da semente, representando o ciclo da vida, o crescimento e a renovação.
                     </p>
                     <p class="card-text" id="valor-produto"><b>Valor: R$ 49,90</b></p>
