--- a/detalhes3.html
+++ b/detalhes3.html
@@ -51,7 +51,7 @@
         <div class="c-card-produto">
             <div class="card w-100 card-produto"> <!--w-100 = width = 100-->
                 <div class="card-body">
-                    <img src="./src/produto-6.png" alt="img-produto-1" id="prod1"/>
+                    <img src="./src/assets/produto-6.png" alt="EcoLink Colar" id="prod1"/>
                     <p class="card-text">O colar <b>"EcoLink"</b> é uma peça elegante e sofisticada, que combina a beleza da madeira natural com a leveza do cordão de fibra natural. O pingente de madeira, com design minimalista e geométrico, é o destaque da peça, enquanto o cordão natural proporciona um toque de rusticidade e leveza.
                     </p>
                     <p class="card-text" id="valor-produto"><b>Valor: R$ 179,90</b></p>
