--- a/detalhes4.html
+++ b/detalhes4.html
@@ -51,7 +51,7 @@
         <div class="c-card-produto">
             <div class="card w-100 card-produto"> <!--w-100 = width = 100-->
                 <div class="card-body">
-                    <img src="./src/produto-2.png" alt="img-produto-4" id="prod1"/>
+                    <img src="./src/assets/produto-2.png" alt="img_Camiseta NOMAD" id="prod1"/>
                     <p class="card-text">A camiseta <b>"NOMAD Conforto"</b> é a peça perfeita para quem busca conforto, estilo e sustentabilidade em um único produto. Feita com algodão orgânico de alta qualidade, ela oferece um toque suave e natural à sua pele, além de ser gentil com o planeta.
                     </p>
                     <p class="card-text" id="valor-produto"><b>Valor: R$ 149,90</b></p>
