--- a/detalhes5.html
+++ b/detalhes5.html
@@ -51,7 +51,7 @@
         <div class="c-card-produto">
             <div class="card w-100 card-produto"> <!--w-100 = width = 100-->
                 <div class="card-body">
-                    <img src="./src/produto-3.png" alt="img-produto-4" id="prod1"/>
+                    <img src="./src/assets/produto-3.png" alt="Camiseta Noite Verde" id="prod1"/>
                     <p class="card-text">A camiseta <b>"Noite Verde"</b> é uma peça essencial para quem busca estilo, conforto e consciência ambiental. Feita com algodão orgânico de alta qualidade, tingido naturalmente, ela oferece um toque suave e natural à sua pele, além de ser gentil com o planeta. A cor preta profunda e o design minimalista a tornam uma peça versátil para diversas ocasiões.
 
                     </p>
