--- a/detalhes.html
+++ b/detalhes.html
@@ -6,45 +6,39 @@
     <title>Detalhes do Produto | Eco Wear</title>
     <!--chamando CSS externo-->
     <link rel="stylesheet" href="./src/css/styles.css">
+    <!-- Chamando icones externos do Footer -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!--adicionando ícone na guia da página-->
     <link rel="shortcut icon" href="./src/logoektd.png">
     <!--importando font (google fonts)-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!--chamando bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!--chamando bootstrap versão mais recente-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="./src/logoektd.png" alt="logo-ekko-trend" id="logo-header">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link efeitolink" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link efeitolink" href="./categorias.html">Produtos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link efeitolink" href="./contato.html">Fale conosco</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <img src="./src/cestinha.png" id="carrinho" alt="Carrinho"/>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+    <header class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <img src="./src/logoektd.png" alt="logo-ekko-trend" id="logo-header">
+            <a class="navbar-brand" href="#">EcoTrend</a>
+
+            <form class="d-flex mx-auto" onsubmit="event.preventDefault(); buscarProdutos();">
+                <input id="barra-pesquisa" class="form-control me-2" type="search" placeholder="Buscar produtos..." aria-label="Buscar">
+                <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
+            </form>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
             </div>
-        </nav>
+        </div>
     </header>
 
     <main>
