--- a/index.html
+++ b/index.html
@@ -8,13 +8,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Importando CSS externo -->
     <link rel="stylesheet" href="./src/css/styles.css">
+        <!-- Chamando icones externos do Footer -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Importando bootstrap no CSS via CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-        <!-- Adcicionar depois a header-->
+      <header class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <img src="./src/logoektd.png" alt="logo-ekko-trend" id="logo-header">
+            <a class="navbar-brand" href="#">EcoTrend</a>
+
+            <form class="d-flex mx-auto" onsubmit="event.preventDefault(); buscarProdutos();">
+                <input id="barra-pesquisa" class="form-control me-2" type="search" placeholder="Buscar produtos..." aria-label="Buscar">
+                <button class="btn btn-success" type="submit"><i class="fas fa-search"></i></button>
+            </form>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
+            </div>
+        </div>
     </header>
 
     <!-- Estrutura do carousel -->
