--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./categorias.html">Produtos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contato.html">Contato</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
             </div>
@@ -65,7 +65,7 @@
                 <div class="carousel-caption">
                     <h5>SEMANA DO CONSUMIDOR</h5>
                     <p class="d-none d-md-block">Camisa EcoWear com até 40% de desconto</p>
-                    <a class="btn btn-lg btn-success" href="" role="button">Ver oferta</a>
+                    <a class="btn btn-lg btn-success" href="./detalhes.html" role="button">Ver oferta</a>
                   </div>
             </div>
             <!-- Slide img 3 -->
@@ -104,7 +104,7 @@
               <div class="card-body">
                 <h5 class="card-title">EcoWear</h5>
                 <p class="card-text">A Camiseta Verde Sustentável para você</p>
-                <a href="#" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes.html" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
       </div>
@@ -115,7 +115,7 @@
               <div class="card-body">
                 <h5 class="card-title">NOMAD Conforto</h5>
                 <p class="card-text">A Camiseta Essencial para o Seu Dia a Dia</p>
-                <a href="#" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes4.html" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
       </div>
@@ -127,7 +127,7 @@
               <div class="card-body">
                 <h5 class="card-title">Noite Verde</h5>
                 <p class="card-text">Camiseta Preta feita de Algodão Orgânico       </p>
-                <a href="#" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes5.html" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
       </div>
@@ -146,7 +146,7 @@
               <div class="card-body">
                 <h5 class="card-title">Boné de Cortiça</h5>
                 <p class="card-text">A sua cobertura natural contra o Sol</p>
-                <a href="#" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes6.html" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
       </div>
@@ -158,7 +158,7 @@
               <div class="card-body">
                 <h5 class="card-title">Semente da Vida</h5>
                 <p class="card-text">Pulseira feita de Madeira Artesanal</p>
-                <a href="#" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes2.html" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
       </div>
@@ -170,7 +170,7 @@
               <div class="card-body">
                 <h5 class="card-title">EcoLink</h5>
                 <p class="card-text">Colar de Madeira e Cordão Natural</p>
-                <a href="#" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes3.html" class="btn btn-primary">Saiba mais</a>
               </div>
           </div>
       </div>
