--- a/detalhes.html
+++ b/detalhes.html
@@ -21,7 +21,7 @@
     <header class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <img src="./src/logoektd.png" alt="logo-ekko-trend" id="logo-header">
-            <a class="navbar-brand" href="#">EcoTrend</a>
+            <a class="navbar-brand" href="./index.html">EcoTrend</a>
 
             <form class="d-flex mx-auto" onsubmit="event.preventDefault(); buscarProdutos();">
                 <input id="barra-pesquisa" class="form-control me-2" type="search" placeholder="Buscar produtos..." aria-label="Buscar">
@@ -33,8 +33,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contato.html">Contato</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
             </div>
