--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <img src="./src/logoektd.png" alt="logo-ekko-trend" id="logo-header">
-            <a class="navbar-brand" href="#">EcoTrend</a>
+            <a class="navbar-brand" href="./index.html">EcoTrend</a>
 
             <form class="d-flex mx-auto" onsubmit="event.preventDefault(); buscarProdutos();">
                 <input id="barra-pesquisa" class="form-control me-2" type="search" placeholder="Buscar produtos..." aria-label="Buscar">
