Adicionando footer para home e categorias, além disso adicionando links para linkedin de cada dev

--- a/categorias.html
+++ b/categorias.html
@@ -143,13 +143,26 @@
         </div>
     </div>
 
-    <footer class="bg-dark text-white text-center py-4">
-        <div class="social-icons">
-            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+    <footer class="rodape">
+        <div class="c-left">
+            <h4 id="title-left">Links Úteis</h2>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./categorias.html">Ver todos os produtos</a></li>
+                <li><a href="./contato.html">Contato</a></li>
+            </ul>
         </div>
-        <p>&copy; 2025 EcoTrend. Todos os direitos reservados.</p>
+    
+        <div class="c-right">
+            <h4 id="title-right">Desenvolvedores</h4>
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/franciscovargas7/"><img src="./src/logo-linkedin.png"/>Francisco Vargas</a></li>
+                    <li><a href="https://www.linkedin.com/in/matheus-e-ikeda-943889331/"><img src="./src/logo-linkedin.png"/>Matheus Eiki</a></li>
+                    <li><a href="https://www.linkedin.com/in/marcelo-affonso-fonseca-899682333/"><img src="./src/logo-linkedin.png"/>Marcelo Affonso</a></li>
+                    <li><a href="https://www.linkedin.com/in/kayque-carvalho-49a190283/"><img src="./src/logo-linkedin.png"/>Kayque Carvalho</a></li>
+                </ul>
+            </h4>
+        </div>
     </footer>
 
     <script>
