--- a/detalhes4.html
+++ b/detalhes4.html
@@ -69,11 +69,11 @@
         <div class="c-right">
             <h4 id="title-right">Desenvolvedores</h4>
                 <ul>
-                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Francisco Vargas</a></li>
-                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Matheus Eiki</a></li>
-                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Marcelo Affonso</a></li>
-                    <li><a href="#"><img src="./src/logo-linkedin.png"/>Kayque Carvalho</a></li>
-                </ul>
+                    <li><a href="https://www.linkedin.com/in/franciscovargas7/"><img src="./src/logo-linkedin.png"/>Francisco Vargas</a></li>
+                    <li><a href="https://www.linkedin.com/in/matheus-e-ikeda-943889331/"><img src="./src/logo-linkedin.png"/>Matheus Eiki</a></li>
+                    <li><a href="https://www.linkedin.com/in/marcelo-affonso-fonseca-899682333/"><img src="./src/logo-linkedin.png"/>Marcelo Affonso</a></li>
+                    <li><a href="https://www.linkedin.com/in/kayque-carvalho-49a190283/"><img src="./src/logo-linkedin.png"/>Kayque Carvalho</a></li>
+                    </ul>
             </h4>
         </div>
     </footer>
