--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </div>
 
       <!-- EcoLink -->
-      <div class="col-md-4 col-sm-6 col-12"> <!-- Adicione isso caso queira que o terceiro slide fique no centro <div class="col-md-4 col-sm-6 col-12 mx-auto">-->
+      <div class="col-md-4 col-sm-6 col-12 mb-5"> <!-- Adicione isso caso queira que o terceiro slide fique no centro <div class="col-md-4 col-sm-6 col-12 mx-auto">-->
           <div class="card">
               <img src="./src/assets/produto-6.png" class="card-img-top" alt="Imagem 6">
               <div class="card-body">
@@ -176,6 +176,28 @@
       </div>
     </div>
   </div>
+
+  <footer class="rodape">
+    <div class="c-left">
+        <h4 id="title-left">Links Úteis</h2>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./categorias.html">Ver todos os produtos</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+        </ul>
+    </div>
+
+    <div class="c-right">
+        <h4 id="title-right">Desenvolvedores</h4>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/franciscovargas7/"><img src="./src/logo-linkedin.png"/>Francisco Vargas</a></li>
+                <li><a href="https://www.linkedin.com/in/matheus-e-ikeda-943889331/"><img src="./src/logo-linkedin.png"/>Matheus Eiki</a></li>
+                <li><a href="https://www.linkedin.com/in/marcelo-affonso-fonseca-899682333/"><img src="./src/logo-linkedin.png"/>Marcelo Affonso</a></li>
+                <li><a href="https://www.linkedin.com/in/kayque-carvalho-49a190283/"><img src="./src/logo-linkedin.png"/>Kayque Carvalho</a></li>
+            </ul>
+        </h4>
+    </div>
+</footer>
 
     <!-- Importando o Script do Bootstrap (JavaScript) via CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
