--- a/categorias.html
+++ b/categorias.html
@@ -13,6 +13,7 @@
     <!-- Header -->
     <header class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
+            <img src="./src/logoektd.png" alt="logo-ekko-trend" id="logo-header">
             <a class="navbar-brand" href="./index.html">EcoTrend</a>
 
             <form class="d-flex mx-auto" onsubmit="event.preventDefault(); buscarProdutos();">
