--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="carousel-item active " data-bs-interval="5000">  <!--data-bs-interval= definir o tempo de mudar para o próximo slide-->
                 <img src="./src/assets-home/carousel_img1.png" class="d-block w-100" alt="Não foi possivel carregar a img1">
                 <div class="carousel-caption"> <!--Para adicionar legenda aos slides--> <!--d-md-block= A legenda só reaparece quando a tela atinge md (médio) ou maior.-->
-                  <h4>ECO TRED</h4>
+                  <h4>ECO TREND</h4>
                   <p class="d-none d-md-block">Confira toda as nossas linhas de produtos auto sustentáveis</p>
                   <a class="btn btn-lg btn-primary" href="./categorias.html">Confira nossos produtos</a>
                 </div>
