--- a/categorias.html
+++ b/categorias.html
@@ -227,5 +227,7 @@
             });
         }
     </script>
+    <!-- Importando a versão mais recente de javaScript do Bootstrap (JavaScript) via CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
