--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Importando bootstrap no CSS via CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <!--importando font (google fonts)-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -54,7 +59,7 @@
             <div class="carousel-item active " data-bs-interval="5000">  <!--data-bs-interval= definir o tempo de mudar para o próximo slide-->
                 <img src="./src/assets-home/carousel_img1.png" class="d-block w-100" alt="Não foi possivel carregar a img1">
                 <div class="carousel-caption"> <!--Para adicionar legenda aos slides--> <!--d-md-block= A legenda só reaparece quando a tela atinge md (médio) ou maior.-->
-                  <h4>ECO TRED</h4>
+                  <h4>ECO TREND</h4>
                   <p class="d-none d-md-block">Confira toda as nossas linhas de produtos auto sustentáveis</p>
                   <a class="btn btn-lg btn-primary" href="./categorias.html">Confira nossos produtos</a>
                 </div>
