Adicionadno IDs para animação dos slides das páginas home e categoria

--- a/categorias.html
+++ b/categorias.html
@@ -68,7 +68,7 @@
 
                     <!-- Boné de cortiça -->
                     <div class="col-md-4 col-6 produto" data-preco="79.99" data-tipo="acessorio" data-marca="ecowear">
-                        <div class="card">
+                        <div class="card" id="animacaocard">
                             <img src="./src/assets/produto-4.png" class="card-img-top" alt="Boné de cortiça EcoWear">
                             <div class="card-body">
                                 <h5 class="card-title">Boné de cortiça EcoWear</h5>
@@ -81,7 +81,7 @@
 
                     <!-- Semente da vida -->
                     <div class="col-md-4 col-6 produto" data-preco="49.90" data-tipo="acessorio" data-marca="terra">
-                        <div class="card">
+                        <div class="card" id="animacaocard">
                             <img src="./src/assets/produto-5.png" class="card-img-top" alt="Pulserira Semente da Vida">
                             <div class="card-body">
                                 <h5 class="card-title">Semente da Vida</h5>
@@ -95,7 +95,7 @@
                     
                     <!-- NOMAD conforto -->
                     <div class="col-md-4 col-6 produto" data-preco="149.90" data-tipo="roupa" data-marca="nomad">
-                        <div class="card">
+                        <div class="card" id="animacaocard">
                             <img src="./src/assets/produto-2.png" class="card-img-top" alt="Camiseta NOMAD">
                             <div class="card-body">
                                 <h5 class="card-title">NOMAD Conforto</h5>
@@ -108,7 +108,7 @@
                     
                     <!-- Camisa ECOWEAR -->
                     <div class="col-md-4 col-6 produto" data-preco="119.99" data-tipo="roupa" data-marca="ecowear">
-                        <div class="card">
+                        <div class="card" id="animacaocard">
                             <img src="./src/assets/produto-1.png" class="card-img-top" alt="Camisa EcoWear">
                             <div class="card-body">
                                 <h5 class="card-title">EcoWear</h5>
@@ -121,7 +121,7 @@
 
                     <!-- EcoLink colar -->
                     <div class="col-md-4 col-6 produto" data-preco="179.90" data-tipo="acessorio" data-marca="terra">
-                        <div class="card">
+                        <div class="card" id="animacaocard">
                             <img src="./src/assets/produto-6.png" class="card-img-top" alt="Colar EcoLink">
                             <div class="card-body">
                                 <h5 class="card-title">Colar EcoLink</h5>
@@ -134,7 +134,7 @@
 
                     <!-- Noite verde -->
                     <div class="col-md-4 col-6 produto" data-preco="149.90" data-tipo="roupa" data-marca="nomad">
-                        <div class="card">
+                        <div class="card" id="animacaocard">
                             <img src="./src/assets/produto-3.png" class="card-img-top" alt="Noite Verde">
                             <div class="card-body">
                                 <h5 class="card-title">Noite Verde</h5>
