--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- Camisa ExoWear -->
     <div class="row gy-5 gx-4">
       <div class="col-md-4 col-sm-6 col-12">
-          <div class="card">
+          <div class="card" id="animacaocard">
               <img src="./src/assets/produto-1.png" class="card-img-top" alt="Imagem 1">
               <div class="card-body">
                 <h5 class="card-title">EcoWear</h5>
@@ -115,7 +115,7 @@
       </div>
       <!-- NOMAD conforto -->
       <div class="col-md-4 col-sm-6 col-12">
-          <div class="card">
+          <div class="card" id="animacaocard">
               <img src="./src/assets/produto-2.png" class="card-img-top" alt="Imagem 2">
               <div class="card-body">
                 <h5 class="card-title">NOMAD Conforto</h5>
@@ -127,7 +127,7 @@
 
       <!-- Noite verde -->
       <div class="col-md-4 col-sm-6 col-12"> <!-- Adicione isso caso queira que o terceiro slide fique no centro <div class="col-md-4 col-sm-6 col-12 mx-auto">-->
-          <div class="card">
+          <div class="card" id="animacaocard">
               <img src="./src/assets/produto-3.png" class="card-img-top" alt="Imagem 3">
               <div class="card-body">
                 <h5 class="card-title">Noite Verde</h5>
@@ -146,7 +146,7 @@
 
       <!-- Boné de Cortiça -->
       <div class="col-md-4 col-sm-6 col-12">
-          <div class="card">
+          <div class="card" id="animacaocard">
               <img src="./src/assets/produto-4.png" class="card-img-top" alt="Imagem 4">
               <div class="card-body">
                 <h5 class="card-title">Boné de Cortiça</h5>
@@ -158,7 +158,7 @@
 
       <!-- Semente da Vida -->
       <div class="col-md-4 col-sm-6 col-12">
-          <div class="card">
+          <div class="card" id="animacaocard">
               <img src="./src/assets/produto-5.png" class="card-img-top" alt="Imagem 5">
               <div class="card-body">
                 <h5 class="card-title">Semente da Vida</h5>
@@ -170,7 +170,7 @@
 
       <!-- EcoLink -->
       <div class="col-md-4 col-sm-6 col-12 mb-5"> <!-- Adicione isso caso queira que o terceiro slide fique no centro <div class="col-md-4 col-sm-6 col-12 mx-auto">-->
-          <div class="card">
+          <div class="card" id="animacaocard">
               <img src="./src/assets/produto-6.png" class="card-img-top" alt="Imagem 6">
               <div class="card-body">
                 <h5 class="card-title">EcoLink</h5>
