--- a/contato.html
+++ b/contato.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato | EcoTrend</title>
-    <!-- Importando CSS externo -->
-    <link rel="stylesheet" href="./src/css/styles.css">
     <!-- Chamando icones externos do Footer -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Importando bootstrap no CSS via CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Importando CSS externo -->
+    <link rel="stylesheet" href="./src/css/styles.css">
     <!--importando font (google fonts)-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +45,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body" id="form">
                             <h2 class="card-title text-center mb-4">Contato</h2>
                             <form>
                                 <div class="mb-3">
