Estilizando os botões do Carousel

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="carousel-caption"> <!--Para adicionar legenda aos slides--> <!--d-md-block= A legenda só reaparece quando a tela atinge md (médio) ou maior.-->
                   <h4>ECO TREND</h4>
                   <p class="d-none d-md-block">Confira toda as nossas linhas de produtos auto sustentáveis</p>
-                  <a class="btn btn-lg btn-primary" href="./categorias.html">Confira nossos produtos</a>
+                  <a class="btn btn-lg btn-customizado" href="./categorias.html">Confira nossos produtos</a>
                 </div>
             </div>
             <!-- Slide img 2 -->
@@ -70,7 +70,7 @@
                 <div class="carousel-caption">
                     <h5>SEMANA DO CONSUMIDOR</h5>
                     <p class="d-none d-md-block">Camisa EcoWear com até 40% de desconto</p>
-                    <a class="btn btn-lg btn-success" href="./detalhes.html" role="button">Ver oferta</a>
+                    <a class="btn btn-lg btn-oferta" href="./detalhes.html" role="button">% Ver oferta %</a>
                   </div>
             </div>
             <!-- Slide img 3 -->
@@ -79,7 +79,7 @@
                 <div class="carousel-caption">
                     <h5>Acessórios Tesouro da Terra</h5>
                     <p class="d-none d-md-block">Confira a nossa linha de acessórios auto sustentáveis</p>
-                    <a class="btn btn-lg btn-primary" href="#categoria2" role="button">Ver mais</a>
+                    <a class="btn btn-lg btn-sobre" href="#categoria2" role="button">Ver mais</a>
                   </div>
             </div>
         </div>
