--- a/categorias.html
+++ b/categorias.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoTrend - Roupas e Acessórios Sustentáveis</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <!-- Chamando icones externos da header -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="./src/css/styles1.css">
+    <!-- Importando bootstrap no CSS via CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Importando CSS externo -->
+    <link rel="stylesheet" href="./src/css/styles.css">
     <!--importando font (google fonts)-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +43,7 @@
     </header>
 
     <div class="container my-5">
-        <div class="row">
+        <div class="row gy-5">
             <!-- Filtros laterais -->
             <aside class="col-md-3">
                 <h4>Filtrar por Preço</h4>
@@ -63,8 +66,8 @@
             
 
             <!-- Grid de produtos -->
-            <div class="col-md-9 gy-1">
-                <div class="row">
+            <div class="col-md-9">
+                <div class="row gy-5 gx-4">
 
                     <!-- Boné de cortiça -->
                     <div class="col-md-4 col-6 produto" data-preco="79.99" data-tipo="acessorio" data-marca="ecowear">
